--- a/index.html
+++ b/index.html
@@ -20,7 +20,76 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <!--============FORMULARIO==========-->
+      <section class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-4 bg-primary text-center rounded mapa">
+            <div class="row"></div>
+          </div>
+
+          <div class="col-sm-12 col-md-8 ps-5">
+            <h2 class="mt-3">ENVIA UN MENSAJE</h2>
+            <form class="py-3">
+              <div class="row g-3">
+                <div class="col">
+                  <label for="Nombre" class="mb-1">Nombre</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Nombre"
+                    aria-label="Nombre"
+                    id="Nombre"
+                    minlength="1"
+                    maxlength="20"
+                    required
+                  />
+                </div>
+                <div class="col">
+                  <label for="Apellido" class="mb-1">Apellido</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Apellido"
+                    aria-label="Apellido"
+                    minlength="1"
+                    maxlength="20"
+                    required
+                  />
+                </div>
+              </div>
+              <label for="Email" class="form-label mt-1">Email</label>
+              <input
+                type="email"
+                class="form-control"
+                placeholder="Ejemplo@gmail.com"
+                id="Email"
+                required
+              />
+              <label for="Mensaje" class="form-label mt-1">Mensaje</label>
+              <textarea
+                class="form-control mb-3"
+                id="Mensage"
+                placeholder="Escriba su mensaje aqui"
+                rows="3"
+              ></textarea>
+              <div class="input-group mb-3">
+                <input
+                  type="file"
+                  class="form-control"
+                  id="subirArchivo"
+                  required
+                />
+                <label for="subirArchivo"></label>
+              </div>
+              <div class="col-12">
+                <button class="btn btn-primary" type="submit">Enviar</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer>
       <div class="container">
         <footer class="py-5">
